--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
   
   };
 
+    //testing 
+    
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
