--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
     .sent {
       background-color: #dcf8c6;
-      align-self: flex-end;
+      align-self: normal;
       margin-left: auto;
     }
     .received {
