--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       word-wrap: break-word;
     }
     .sent {
-      background-color: #dcf8c6;
+      background-color: #868cc4;
       align-self: normal;
       margin-left: auto;
     }
